# OpenCvSharp4.Cuda

./: .dockerignore  .gitignore  .gitmodules  OpenCvSharp.Cuda.slnx  README.md  build.nuget.cuda.ps1  build.nuget.windows.cuda.ps1  build_opencv_linux.cuda.multi.ps1  build_opencv_linux.cuda.multi.sh  build_opencv_windows.cuda.multi.ps1  build_opencv_windows.cuda.ps1  build_opencvsharpextern.linux.cuda.multi.ps1  build_opencvsharpextern.linux.cuda.multi.sh  build_opencvsharpextern.ps1  build_opencvsharpextern.windows.cuda.multi.ps1  docker-compose.yml  launchSettings.json  test_all_linux.ps1  test_all_linux.sh  test_all_windows.ps1
cmake/: opencv_build_options_cuda.cmake
cmake/triplets/: x64-windows-static.cmake
docker/nvidia-cuda12.8/: Dockerfile
docker/ubuntu24-dotnet10-opencv.cuda4.13.0-build/: Dockerfile
docker/ubuntu24-dotnet10-opencv.cuda4.13.0-runtime/: Dockerfile
nuget/: OpenCvSharp4.Cuda.NvidiaRedist.win.Compute.csproj  OpenCvSharp4.Cuda.NvidiaRedist.win.Core.csproj  OpenCvSharp4.Cuda.NvidiaRedist.win.csproj  OpenCvSharp4.Cuda.NvidiaRedist.win.props  OpenCvSharp4.Cuda.runtime.linux-x64.csproj  OpenCvSharp4.Cuda.runtime.linux.props  OpenCvSharp4.Cuda.runtime.win.csproj  OpenCvSharp4.Cuda.runtime.win.slim.csproj  README.NvidiaRedist.md  README.cuda.md  README.runtime.md
scripts/: build_all.ps1  install_opencv.sh
scripts/build-opencv/: build_opencv_linux.cuda.multi.ps1  build_opencv_linux.cuda.multi.sh  build_opencv_windows.cuda.multi.ps1  build_opencv_windows.cuda.ps1
scripts/build-opencvsharp/: build_opencvsharpextern.linux.cuda.multi.ps1  build_opencvsharpextern.linux.cuda.multi.sh  build_opencvsharpextern.windows.cuda.multi.ps1
scripts/nuget/: build.nuget.cuda.ps1  push.nuget.cuda.ps1
scripts/test/: test_all_linux.ps1  test_all_linux.sh  test_all_windows.ps1
src/OpenCvSharp.Cuda/: OpenCvSharp.Cuda.csproj  README.md
src/OpenCvSharp.Cuda/Cv2/: Cv2Cuda.cs
src/OpenCvSharp.Cuda/Cv2/Cuda/: Cv2_cuda_arithm.cs  Cv2_cuda_core.cs  Cv2_cuda_imgproc.cs  Cv2_cuda_legacy.cs  Cv2_cuda_opengl.cs  Cv2_cuda_photo.cs  Cv2_cuda_stereo.cs  Cv2_cuda_stream.cs  Cv2_cuda_warping.cs
src/OpenCvSharp.Cuda/Fundamentals/: OpenCvCudaPtrSafeHandle.cs
src/OpenCvSharp.Cuda/Internal/PInvoke/NativeMethods/: NativeMethods_cuda_stdvectors.cs
src/OpenCvSharp.Cuda/Modules/cuda/: BufferPool.cs  CudaInputArray.cs  DeviceInfo.cs  DisposableGpuObject.cs  Event.cs  GpuData.cs  GpuMat.cs  GpuMatIndexer.cs  GpuMatND.cs  GpuMatRowColIndexer.cs  HostMem.cs  InputArray.cs  InputOutputArray.cs  OutputArray.cs  Stream.cs  StreamAccessor.cs  TargetArchs.cs
src/OpenCvSharp.Cuda/Modules/cuda/Enum/: AlphaCompTypes.cs  ComputeMode.cs  ConnectedComponentsAlgorithmsTypes.cs  CreateFlags.cs  CudaMemAllocType.cs  DescriptorFormat.cs  FeatureSet.cs  MomentsOrder.cs  NvidiaOfHintGridSize.cs  NvidiaOfOutputGridSize.cs  NvidiaOfPerfLevel.cs  SURFKeypointLayout.cs  StereoSGMMode.cs
src/OpenCvSharp.Cuda/Modules/cuda/arithm/: Convolution.cs  DFT.cs  LookUpTable.cs
src/OpenCvSharp.Cuda/Modules/cuda/bgsegm/: BackgroundSubtractorMOG.cs  (+1 more)
src/OpenCvSharpExtern/: CMakeLists.txt  OpenCvSharpExtern.vcxproj  OpenCvSharpExtern.vcxproj.filters  cuda.cpp  cuda_Arithm.h  cuda_Bgsegm_fgd.h  cuda_CascadeClassifier.h  cuda_CornersDetector.h  cuda_DescriptorMatcher.h  cuda_Feature2DAsync.h  cuda_Filters.h  cuda_HoughLinesDetector.h  cuda_Imgproc.h  cuda_InputArray.h  cuda_Legacy.h  cuda_NvidiaHWOpticalFlow.h  cuda_OutputArray.h  cuda_SURF_CUDA.h  cuda_SparseOpticalFlow.h  cuda_Warping.h  my_cuda_functions.h
test/OpenCvSharp.Cuda.Console.Test/: Dockerfile  OpenCvSharp.Cuda.Console.Test.csproj  Program.cs
test/OpenCvSharp.Cuda.Console.Test/Properties/: launchSettings.json
test/OpenCvSharp.Cuda.Tests/: OpenCvSharp.Cuda.Tests.csproj
test/OpenCvSharp.Cuda.Tests/cuda/: CudaArthimTest.cs  CudaBufferPoolTests.cs  CudaCoreTest.cs  CudaDeviceInfoTest.cs  CudaEventTest.cs  CudaFiltersTest.cs  CudaGpuMatNDTest.cs  CudaGpuMatTest.cs  CudaHostMemTest.cs  CudaImgProcTest.cs  CudaLegacyTest.cs  CudaOpenGLTest.cs  CudaPhotoTest.cs  CudaStereoTest.cs  CudaStreamTest.cs  CudaTestBase.cs  CudaWarpingTest.cs  GpuDataTest.cs  GpuMatTest.cs  OpenCvCudaConfigTest.cs  StreamAccessorTests.cs  TargetArchsTest.cs
test/OpenCvSharp.Cuda.Tests/cuda/bgsegm/: CudaBgsegmMog.cs  CudaBgsegmMog2.cs
test/OpenCvSharp.Cuda.Tests/cuda/features2d/: CudaDescriptionMatcherTest.cs  CudaFastFeatureDetectorTest.cs  CudaORBTest.cs  CudaSURFCUDATest.cs
test/OpenCvSharp.Cuda.Tests/cuda/imgproc/: CudaCannyEdgeDetectorTest.cs  CudaCornernessCriteriaTest.cs  CudaCornersDetectorTest.cs  CudaGeneralizedHoughBallardTest.cs  CudaGeneralizedHoughGuilTest.cs  CudaHoughCirclesDetectorTest.cs  CudaHoughLinesDetectorTest.cs  CudaHoughSegmentDetectorTest.cs  CudaTemplateMatchingTest.cs
test/OpenCvSharp.Cuda.Tests/cuda/legacy/: CudaBgsegmFGDTest.cs  CudaBgsegmGMGTest.cs  CudaFastOpticalFlowBMTest.cs  CudaImagePyramidTest.cs
test/OpenCvSharp.Cuda.Tests/cuda/objdetect/: CudaCascadeClassifierTest.cs
test/OpenCvSharp.Cuda.Tests/cuda/objectdetect/: CudaCascadeClassifierTest.cs  CudaHOGTest.cs
test/OpenCvSharp.Cuda.Tests/cuda/optflow/: CudaBroxOpticalFlowTests.cs  CudaDensePyrLKTest.cs  CudaFarnebackOpticalFlowTest.cs  CudaNvidiaOpticalFlow_1_0Test.cs  CudaNvidiaOpticalFlow_2_0Test.cs  CudaOpticalFlowDual_TVL1Test.cs  CudaSparsePyrLKOpticalFlowTest.cs
test/OpenCvSharp.Cuda.Tests/cuda/stereo/: CudaDisparityBilateralFilterTest.cs  CudaStereoBMTest.cs  CudaStereoBeliefPropagationTest.cs  CudaStereoConstantSpaceBPTest.cs  CudaStereoSGMTest.cs
(+103 files in other folders)
