cmake_minimum_required(VERSION 3.15)

include_directories(${OpenCV_INCLUDE_DIR})
IF(!EMSCRIPTEN)
	link_directories(${OpenCV_LIBRARY_DIR} ${OpenCV_LIBRARIES})
ENDIF()
IF(APPLE)
    # Fix linking on 10.14+. See https://stackoverflow.com/questions/54068035
    link_directories(/usr/local/lib)
ENDIF()

set(REPO_ROOT "${CMAKE_CURRENT_SOURCE_DIR}/../..")

# Make headers from the upstream extern dir available to your override files
include_directories("${REPO_ROOT}/extern/OpenCvSharp/src/OpenCvSharpExtern")
include_directories("${CMAKE_CURRENT_SOURCE_DIR}") 

# Collect base sources from the upstream extern directory
file(GLOB BASE_FILES "${REPO_ROOT}/extern/OpenCvSharp/src/OpenCvSharpExtern/*.cpp")

# Collect your override/extension files
file(GLOB OVERRIDE_FILES "${CMAKE_CURRENT_SOURCE_DIR}/*.cpp")

# Build a deduplicated list: start with base files, then let overrides win by filename
set(OPENCVSHARP_FILES "")
foreach(base_file ${BASE_FILES})
    get_filename_component(base_name "${base_file}" NAME)
    set(shadowed FALSE)
    foreach(override_file ${OVERRIDE_FILES})
        get_filename_component(override_name "${override_file}" NAME)
        if(base_name STREQUAL override_name)
            set(shadowed TRUE)
            break()
        endif()
    endforeach()
    if(NOT shadowed)
        list(APPEND OPENCVSHARP_FILES "${base_file}")
    endif()
endforeach()

# Add all override files (replacements + new additions)
list(APPEND OPENCVSHARP_FILES ${OVERRIDE_FILES})

# Resolve Protobuf target before OpenCV config is loaded.
if(APPLE)
	find_package(Protobuf REQUIRED)
endif()

# On Windows, OpenCV is built as a static library; tell the Windows Pack config to look for static libs.
# Also force /MT (static CRT) to match OpenCV's build configuration, and enable /MP for parallel compilation.
# Add the vcpkg lib dir to the linker search path so that plain-name lib references in
# OpenCVModules.cmake (e.g. tesseract55.lib) are resolved even on multi-config generators
# where cmake may not emit the full path for release-only vcpkg builds.
if(WIN32)
	set(OpenCV_STATIC ON)
	set(CMAKE_MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
	add_compile_options($<$<CXX_COMPILER_ID:MSVC>:/MP>)
	if(DEFINED VCPKG_INSTALLED_DIR AND DEFINED VCPKG_TARGET_TRIPLET)
		link_directories("${VCPKG_INSTALLED_DIR}/${VCPKG_TARGET_TRIPLET}/lib")
	endif()
endif()

find_package(OpenCV REQUIRED)

# iconv support isn't automatic on some systems
find_package(Iconv QUIET)
if(NOT Iconv_FOUND)
  add_compile_definitions(NO_ICONV=1)
endif()

if(OpenCV_FOUND)
	include_directories(${OpenCV_INCLUDE_DIRS})
	#set(LIBS ${LIBS} ${OpenCV_LIBRARIES})

	if(CMAKE_GENERATOR MATCHES "Visual Studio")
		set(CMAKE_CXX_STANDARD_LIBRARIES "${CMAKE_CXX_STANDARD_LIBRARIES} kernel32.lib user32.lib gdi32.lib winspool.lib comdlg32.lib advapi32.lib shell32.lib ole32.lib oleaut32.lib uuid.lib odbc32.lib odbccp32.lib")
	endif()

	if(EMSCRIPTEN)
		# TODO: replace path
		add_library(OpenCvSharpExtern STATIC ${OPENCVSHARP_FILES} ${WASM_LIB})
	else()
		add_library(OpenCvSharpExtern SHARED ${OPENCVSHARP_FILES})
		target_link_libraries(OpenCvSharpExtern ${OpenCV_LIBRARIES})
	endif()

	if(Iconv_FOUND)
		target_link_libraries(OpenCvSharpExtern Iconv::Iconv)
	endif()

	# Link Tesseract on Windows and Linux.
	# Windows: installed as a static library via vcpkg (CMAKE_PREFIX_PATH points to vcpkg_installed/).
	# Linux:   installed as a static library by docker/manylinux/build_static_deps.sh
	#          into CMAKE_PREFIX_PATH (typically /opt/deps).
	if(NOT EMSCRIPTEN AND NOT APPLE)
		find_package(Tesseract QUIET)
		if(Tesseract_FOUND)
			if(WIN32)
				# vcpkg installs only the release variant of Tesseract (no debug libs).
				# Map Debug configuration to Release so the linker does not look for tesseract*d.lib.
				set_target_properties(Tesseract::libtesseract PROPERTIES
					MAP_IMPORTED_CONFIG_DEBUG Release)
			endif()
			target_link_libraries(OpenCvSharpExtern Tesseract::libtesseract)
		endif()
	endif()

	install(TARGETS OpenCvSharpExtern
        RUNTIME DESTINATION bin
        LIBRARY DESTINATION lib
        ARCHIVE DESTINATION lib/static
	)

	# On Windows: copy DLL and the OpenCV FFmpeg plugin DLL to the test project directory.
	# Disabled for slim builds (NO_INSTALL_TO_TEST=ON) to avoid overwriting the full DLL.
	if(WIN32 AND NOT EMSCRIPTEN AND NOT NO_INSTALL_TO_TEST)
		set(TEST_OUTPUT_DIR "${CMAKE_SOURCE_DIR}/../test/OpenCvSharp.Tests")

		add_custom_command(TARGET OpenCvSharpExtern POST_BUILD
			COMMAND ${CMAKE_COMMAND} -E copy_if_different
				$<TARGET_FILE:OpenCvSharpExtern>
				"${TEST_OUTPUT_DIR}/OpenCvSharpExtern.dll"
			COMMENT "Copying OpenCvSharpExtern.dll to test project"
		)

		# Derive the OpenCV install root from the cmake config path (lib/cmake/opencv4 → root)
		get_filename_component(OPENCV_INSTALL_PREFIX "${OpenCV_DIR}/../../.." ABSOLUTE)
		set(OPENCV_VER_STR "${OpenCV_VERSION_MAJOR}${OpenCV_VERSION_MINOR}${OpenCV_VERSION_PATCH}")
		set(OPENCV_FFMPEG_DLL "${OPENCV_INSTALL_PREFIX}/bin/opencv_videoio_ffmpeg${OPENCV_VER_STR}_64.dll")

		if(EXISTS "${OPENCV_FFMPEG_DLL}")
			add_custom_command(TARGET OpenCvSharpExtern POST_BUILD
				COMMAND ${CMAKE_COMMAND} -E copy_if_different
					"${OPENCV_FFMPEG_DLL}"
					"${TEST_OUTPUT_DIR}/opencv_videoio_ffmpeg${OPENCV_VER_STR}_64.dll"
				COMMENT "Copying opencv_videoio_ffmpeg DLL to test project"
			)
		endif()
	endif()
endif(OpenCV_FOUND)
